--- a/style.css
+++ b/style.css
@@ -26,15 +26,41 @@ header h1{
     font-family: cursive !important;
 }
 
+/*Body Styles*/ 
+
+body{ 
+    display:flex; 
+    flex-direction:column; 
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
+}
+
 /* Section Styles */
 
 section.list-container{
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
+    justify-content:space-between;
     align-items: center;
+    border: 2px solid blueviolet;
+    width: 40%;
+    margin-left: 30%;
+    border-radius: 20px;
+    padding: 40px;
+    box-shadow: 0px 2px 20px #808080;
+    background-color: papayawhip;
+}
+
+section.list-container li{
+    list-style: none;
+    
+}
+
+section.list-container li div{
     position: relative;
-    padding: 40px 0px;
+    float: right;
+    
 }
 
 section.list-container div.input{
@@ -51,7 +77,8 @@ section.list-container div.input input{
     font-size: 1.2rem;
     border-radius: 5px;
     height: 100%;
-    
+    width: 300px;
+    padding-left: 10px;
 }
 
 section.list-container div.input button{
@@ -67,15 +94,33 @@ section.list-container div.input button{
 }
 
 section.list-container div.pending{
-    margin: 20px 0px;
+    margin: 120px;
+    border-radius: 5px;
+    background-color: cadetblue;
+    width: 100%;
+    padding: 25px;
+    max-width: 400px;
+    margin-top: 15px;
     
 }
 
-body{ 
-    display:flex; 
-    flex-direction:column; 
+section.list-container div.pending h3{
+    margin-bottom: 5px;
+    border: 2px solid;
 }
 
+section.list-container div.completed{
+    
+    border-radius: 5px;
+    background-color: orchid;
+    width: 100%;
+    padding: 25px;
+    max-width: 400px;
+    
+}
+
+
+/* Footer Styles */
 
 footer{
     display: flex;
@@ -86,10 +131,11 @@ footer{
     padding:10px;
     color:black !important;
     font-family: monoton !important;
-    position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
+    width: 100%;
+    height: 50px;
+    position: sticky;
+    left: 0;
+    bottom: 0;
 }
 
 footer a{
