--- a/style.css
+++ b/style.css
@@ -54,6 +54,15 @@ section.list-container{
 
 section.list-container li{
     list-style: none;
+    position: relative;
+    list-style: none;
+    margin-bottom: 8px;
+    background: #f2f2f2;
+    border-radius: 3px;
+    padding: 10px 15px;
+    cursor: default;
+    overflow: hidden;
+    word-wrap: break-word;
     
 }
 
@@ -107,6 +116,10 @@ section.list-container div.pending{
 section.list-container div.pending h3{
     margin-bottom: 5px;
     border: 2px solid;
+}
+section.list-container div.pending i{
+    margin: 10px;
+    margin-left: 20px;
 }
 
 section.list-container div.completed{
