--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header{
 
 header h1{
     text-align: center;
-    color: blanchedalmond;
+    color: #ebffe5;
     font-size: 4rem;
     margin: 100px auto;
     font-family: cursive !important;
@@ -31,25 +31,37 @@ header h1{
 body{ 
     display:flex; 
     flex-direction:column; 
-    height: 100vh;
     width: 100%;
+    min-height: 100vh;
     background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
+    
+    
 }
 
 /* Section Styles */
 
 section.list-container{
-    display: flex;
-    flex-direction: column;
     justify-content:space-between;
     align-items: center;
     border: 2px solid blueviolet;
-    width: 40%;
-    margin-left: 30%;
-    border-radius: 20px;
-    padding: 40px;
+    max-height: 55vh;
+    justify-content: center;
     box-shadow: 0px 2px 20px #808080;
     background-color: papayawhip;
+    background: #fff;
+    max-width: 470px;
+    margin: 30px auto;
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+}
+
+section.list-container div.pending h3{
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    margin-bottom: 15px;
+    color: #ff6961;
 }
 
 section.list-container li{
@@ -57,24 +69,34 @@ section.list-container li{
     position: relative;
     list-style: none;
     margin-bottom: 8px;
-    background: #f2f2f2;
+    background: paleturquoise;
     border-radius: 3px;
     padding: 10px 15px;
-    cursor: default;
-    overflow: hidden;
-    word-wrap: break-word;
-    
+    margin-bottom: 8px;
 }
 
-section.list-container li div{
-    position: relative;
-    float: right;
-    
+section.list-container li span{
+    position: absolute;
+    right: 0;
+    color: #fff;
+    width: 45px;
+    background: #e74c3c;
+    height: 100%;
+    width: 45px;
+    text-align: center;
+    top: 0;
+    border-radius: 0px 3px 3px 0px;
+    cursor: pointer;
 }
+section.list-container li i{ 
+    position: relative;
+    top: 27%;
+}
+
 
 section.list-container div.input{
     width: 100;
-    display:flex;
+    margin-left: 10px;
     align-items: center;
     height:50px;
 }
@@ -103,35 +125,14 @@ section.list-container div.input button{
 }
 
 section.list-container div.pending{
-    margin: 120px;
+    margin: 120px auto;
     border-radius: 5px;
-    background-color: cadetblue;
+    background-color: #8feeb7;
     width: 100%;
     padding: 25px;
     max-width: 400px;
     margin-top: 15px;
-    
 }
-
-section.list-container div.pending h3{
-    margin-bottom: 5px;
-    border: 2px solid;
-}
-section.list-container div.pending i{
-    margin: 10px;
-    margin-left: 20px;
-}
-
-section.list-container div.completed{
-    
-    border-radius: 5px;
-    background-color: orchid;
-    width: 100%;
-    padding: 25px;
-    max-width: 400px;
-    
-}
-
 
 /* Footer Styles */
 
@@ -143,12 +144,12 @@ footer{
     background-color: #f1f1f1;
     padding:10px;
     color:black !important;
-    font-family: monoton !important;
     width: 100%;
     height: 50px;
     position: sticky;
     left: 0;
     bottom: 0;
+    
 }
 
 footer a{
